# assassin-cycle-generator

./: README.md  assassin.py  setup.cfg
assassin/: __main__.py
src/assassin/: __init__.py  assassin.py
