[metadata]
name = assassin-cycle-generator-maxime915
version = 0.0.1
author = Maxime915
author_email = maxime915@github.com
description = Generate cycles for the assassin game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maxime915/assassin-cycle-generator
project_urls =
    Bug Trackers = https://github.com/maxime915/assassin-cycle-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

